[gd_scene load_steps=2 format=3 uid="uid://xn5cyiq4davq"]

[ext_resource type="Script" path="res://scenes/ui/menu/settings.gd" id="1_k2bsr"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2bsr")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 78
text = "Settings"

[node name="Graphics" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Graphics"
horizontal_alignment = 1

[node name="Lighting" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lighting"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="PostProcessing" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Post Processing"

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="Gameplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Gameplay"
horizontal_alignment = 1

[node name="Difficulty" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Difficulty"

[node name="OptionButton4" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="Head Bob" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Head Bob"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="Fog" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fog Mode"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton3" to="." method="_on_option_button_3_item_selected"]
[connection signal="pressed" from="VBoxContainer/CheckBox2" to="." method="_on_check_box_2_pressed"]
[connection signal="pressed" from="VBoxContainer/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
